add dialog-post object

--- a/src/App.scss
+++ b/src/App.scss
@@ -102,6 +102,10 @@ main {
                 background: var(--alt-blue);
             }
         }
+        .add.loading {
+            background: var(--accents---vibrant-blue---dark);
+
+        }
         button {
             border-radius: 8px;
             width: 110px;
