--- a/src/App.scss
+++ b/src/App.scss
@@ -7,9 +7,12 @@ main {
 
     .container {
         flex-direction: column;
+        align-items: center;
+        gap: 10px;
     }
 
     .add_btn {
+        width: 100%;
         background: var(--accents-blue);
         border: 1px solid rgba(255, 255, 255, 0.24);
         border-radius: 8px;
@@ -23,11 +26,60 @@ main {
             background: var(--alt-blue);
         }
     }
-    
+    .list_item {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        padding: 8px 10px;
+        height: 50px;
+        border-radius: 12px;
+        border: 1px solid var(--border-color);
+
+        .item {
+            display: flex;
+            width: 50%;
+
+            button {
+                width: 120px;
+                height: 30px;
+                border-radius: 6px;
+            }
+        }
+
+        .delete_btn {
+            transition: .2s;
+            border: 1.5px solid var(--accents-red---dark);
+            font: 500 14px / 143% var(--font-family);
+            text-align: center;
+            background: #333333;
+            color: var(--accents-red---dark);
+            &:hover{
+                background: #4d2c2c;
+            }
+        }
+        .change_btn {
+            transition: .2s;
+            border: 1.5px solid var(--accents-blue);
+            font: 500 14px / 143% var(--font-family);
+            text-align: center;
+            background: #333333;
+            color: var(--accents-blue);
+            &:hover{
+                background: #2c354d;
+            }
+        }
+        .information {
+            flex-direction: column;
+        }
+        .function_btns {
+            justify-content: flex-end;
+            gap: 20px
+        }
+    }
 };
 
 .diaolig_ {
-    background-color: rgba(0, 0, 0, 0.218);
+    background-color: rgba(20, 20, 20, 0.509);
     backdrop-filter: blur(3px);
     
 
@@ -54,8 +106,9 @@ main {
         height: 40%;
         border-radius: 16px;
         backdrop-filter: blur(32px);
-        background: var(--materials---controls-fullscreen---dark);
-
+        background: rgba(46, 46, 46, 0.8);
+        box-shadow: inset 0 0 3px 0 var(--fills-primary---dark), 0 0 3px 0 rgba(0, 0, 0, 0.55), 0 8px 40px 0 var(--text-tertiary);
+        border: 1.5px solid rgba(93, 93, 93, 0.8);
         display: flex;
         justify-content: center;
         align-items: center;
@@ -68,13 +121,14 @@ main {
      input {
         transition: .2s;
         outline: none;
-        box-shadow: 0 0 0 0px rgba(0, 122, 255, 0.5), 0 0 0 0px var(--fills-tertiary), 0 0px 2px 0 rgba(0, 0, 0, 0.3);
         border: none;
         border-radius: 8px;
         padding: 5px 5px 5px 12px;
         width: 80%;
         height: 17%;
         font-size: 15px;
+        box-shadow: inset 0 0 2px 0 var(--fills-primary---dark), 0 0 3px 0 rgba(0, 0, 0, 0.55), 0 8px 40px 0 var(--text-tertiary);
+
      }
      input:focus{
         box-shadow: 0 0 0 3px rgba(0, 122, 255, 0.5), 0 0 0 0px var(--fills-tertiary), 0 0px 2px 0 rgba(0, 0, 0, 0.3);
@@ -89,10 +143,10 @@ main {
             border: 1px solid rgba(255, 255, 255, 0.2);
             font: 500 14px / 143% var(--font-family);
             text-align: center;
-            background: #1F1F1F;
+            background: #2e2e2e;
             color: var(--text-primary---dark);
             &:hover{
-                background: #2b2b2b;
+                background: #393939;
             }
         }
         .add {
@@ -110,6 +164,8 @@ main {
             border-radius: 8px;
             width: 110px;
             height: 30px;
+             box-shadow: inset 0 0 1px 0 var(--fills-primary---dark), 0 0 3px 0 rgba(0, 0, 0, 0.55), 0 8px 40px 0 var(--text-tertiary);
+
         }
      }
 };
@@ -143,3 +199,15 @@ main {
         display: none;
     }
 }
+
+
+
+// .diaolig_delete_.disabled {
+//     display: none;
+// }
+// .diaolig_delete_.cloused {
+//     animation: clouse_dialog .2s forwards;
+// }
+// .diaolig_delete_.opened {
+//     animation: open_dialog .2s forwards;
+// }
