--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 :root {
 	--white: #fff;
+	--border-color: rgba(255, 255, 255, 0.2);
 	--accents-red: #ff3b30;
 	--accents-red---dark: #ff453a;
 	--accents-orange: #ff9500;
@@ -153,4 +154,18 @@ a {
   left: 0;
   width: 100%;
   height: 100vh;
+}
+
+
+.spiner {
+	animation: loadingSpiner 1200ms linear infinite;
+	
+}
+
+@keyframes loadingSpiner {
+	0% {     
+		transform: rotate(10deg);
+	}100% {     
+		transform: rotate(360deg);
+	}
 }
