--- a/src/App.scss
+++ b/src/App.scss
@@ -202,12 +202,83 @@ main {
 
 
 
-// .diaolig_delete_.disabled {
-//     display: none;
-// }
-// .diaolig_delete_.cloused {
-//     animation: clouse_dialog .2s forwards;
-// }
-// .diaolig_delete_.opened {
-//     animation: open_dialog .2s forwards;
-// }
+.diaolig_delete_.disabled {
+    display: none;
+}
+.diaolig_delete_.cloused {
+    animation: clouse_dialog .2s forwards;
+}
+.diaolig_delete_.opened {
+    animation: open_dialog .2s forwards;
+}
+.diaolig_delete_{
+    background-color: rgba(20, 20, 20, 0.509);
+    backdrop-filter: blur(3px);
+
+    .contant {
+        width: 100%;
+        height: 100vh;
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        ._container {
+            width: 90%;
+            height: 60%;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+    }
+    .contant_is {
+        width: 40% ;
+        height: 20%;
+        border-radius: 16px;
+        backdrop-filter: blur(32px);
+        background: rgba(46, 46, 46, 0.8);
+        box-shadow: inset 0 0 3px 0 var(--fills-primary---dark), 0 0 3px 0 rgba(0, 0, 0, 0.55), 0 8px 40px 0 var(--text-tertiary);
+        border: 1.5px solid rgba(93, 93, 93, 0.8);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    h3 {
+        font-weight: 400;
+        font-size: 20px;
+        color: var(--accents-red---dark);
+    }
+    .function_btns {
+        display: flex;
+        gap: 20px;
+
+        .delete {
+            transition: .2s;
+            border: 1px solid var(--accents-red---dark);
+            font: 500 14px / 143% var(--font-family);
+            text-align: center;
+            background: #2e2e2e;
+            color: var(--accents-red---dark);
+            &:hover{
+                background: #391b1b;
+            }
+        }
+        .close {
+            border: 1px solid var(--border-color);
+            background: #333333;
+
+            &:hover{
+                background: #393939;
+            }
+        }
+        button {
+            border-radius: 8px;
+            width: 110px;
+            height: 30px;
+             box-shadow: inset 0 0 1px 0 var(--fills-primary---dark), 0 0 3px 0 rgba(0, 0, 0, 0.55), 0 8px 40px 0 var(--text-tertiary);
+
+        }
+    }
+}
